<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verifyFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyFragment">


    <TextView
        android:id="@+id/verifyTextView"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif-monospace"
        android:text="@string/verify_text_view"
        android:textAllCaps="true"
        android:textColor="#53007d"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/verifyEditText"
        android:layout_width="159dp"
        android:layout_height="0dp"
        android:layout_marginEnd="112dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/verify_code_hint"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyImageView" />

    <ImageView
        android:id="@+id/verifyImageView"
        android:layout_width="211dp"
        android:layout_height="186dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/lock_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyTextView" />

    <Button
        android:id="@+id/verifyButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/verify_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/doWhatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        android:text="@string/verify_dowhat_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/verifyProgressBar"
        android:layout_width="86dp"
        android:layout_height="55dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974" />

    <TextView
        android:id="@+id/verifyDoWhatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="serif-monospace"
        android:text="@string/verify_dowhat_text"
        android:textAlignment="center"
        android:textColor="#53007d"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyEditText" />

    <ImageView
        android:id="@+id/verifyThumbsUp"
        android:layout_width="126dp"
        android:layout_height="112dp"
        android:layout_marginBottom="44dp"
        android:visibility="gone"
        android:src="@drawable/thumbsup"
        app:layout_constraintBottom_toTopOf="@+id/verifyButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/verifyIGetItButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        android:text="@string/verify_igetit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>