<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPassword">

    <TextView
        android:id="@+id/verifyChangePasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif-monospace"
        android:text="@string/verify_text_view"
        android:textAllCaps="true"
        android:textColor="#53007d"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/verifyChangePasswordCode"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/verify_code_hint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyChangePasswordTextView" />

    <Button
        android:id="@+id/verifyChangePasswordButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/verify_button"
        app:layout_constraintStart_toEndOf="@+id/verifyChangePasswordCode"
        app:layout_constraintTop_toBottomOf="@+id/verifyChangePasswordTextView" />

    <TextView
        android:id="@+id/resetAndConfirmTextView"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="96dp"
        android:fontFamily="serif-monospace"
        android:text="@string/reset_enter_new_text"
        android:textAllCaps="true"
        android:textColor="#53007d"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyChangePasswordButton" />

    <EditText
        android:id="@+id/changePasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/reset_new_password_hint"
        android:inputType="textPassword"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetAndConfirmTextView" />

    <TextView
        android:id="@+id/changePassInstructionsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/register_pass_instructions"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePasswordEditText" />

    <EditText
        android:id="@+id/confirmChangePasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/reset_confirm_new_password_hint"
        android:background="@drawable/edit_text_style"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePassInstructionsText" />

    <ImageView
        android:id="@+id/checkmark"
        android:layout_width="58dp"
        android:layout_height="46dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/checkmark"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/verifyChangePasswordButton"
        app:layout_constraintTop_toBottomOf="@+id/verifyChangePasswordTextView" />

    <ImageView
        android:id="@+id/redx"
        android:layout_width="99dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/redx"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/verifyChangePasswordButton"
        app:layout_constraintTop_toBottomOf="@+id/verifyChangePasswordTextView" />

    <ProgressBar
        android:id="@+id/verifyResetProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/verifyChangePasswordButton"
        app:layout_constraintTop_toBottomOf="@+id/verifyChangePasswordTextView" />

    <Button
        android:id="@+id/resetPasswordButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/reset_password_button"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmChangePasswordEditText" />

    <ProgressBar
        android:id="@+id/resetPasswordProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="88dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/resetPasswordButton"
        app:layout_constraintTop_toBottomOf="@+id/confirmChangePasswordEditText" />

</android.support.constraint.ConstraintLayout>